Update and rename New Service or Pivot One.html to index.html

--- a/index.html
+++ b/index.html
@@ -476,12 +476,12 @@
       </div>
       <div class="modal-body">
         <p>Now that you are here, we hope you are ready to upload your group's 1-page note.</p>
-        <p>When ready, you can submit the note and the groups details via the Ms-Forms link.</p>
+        <p>When ready, you can submit the note and the group's details via the Ms-Forms link.</p>
 
         <p><strong>Submission Link:</strong></p>
         <a href="https://forms.office.com/r/HuNbJS2sCk" target="_blank"
            style="display:inline-block;padding:10px 16px;background:var(--orange);color:#fff;border-radius:6px;text-decoration:none;">
-          Upload project's outline (Form link)
+          Upload Lab report (Form link)
         </a>
       </div>
       <div class="modal-footer">CTA for your capstone Lab.</div>
@@ -522,3 +522,4 @@
   </script>
 </body>
 </html>
+
