--- a/index.html
+++ b/index.html
@@ -476,6 +476,11 @@
       </div>
       <div class="modal-body">
         <p>Now that you are here, we hope you are ready to upload your group's 1-page note.</p>
+       <p>
+  <a href="https://coolpravat.github.io/MKT-Strategy-Prompt/" target="_blank" rel="noopener noreferrer">
+    https://coolpravat.github.io/MKT-Strategy-Prompt/
+  </a>
+</p>
         <p>When ready, you can submit the note and the group's details via the Ms-Forms link.</p>
 
         <p><strong>Submission Link:</strong></p>
@@ -522,4 +527,5 @@
   </script>
 </body>
 </html>
+
 
