--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
     <div class="content">
       <!-- FRONT PAGE PARAGRAPHS -->
       <section class="intro">
-        <p><strong>Capstone Lab Introduction:</strong> </br> In this lab, you will either manage market dominance or disrupt a category.
+        <p><strong>Capstone Lab Introduction:</strong> </br> In this lab, you select to either manage market dominance or disrupt a category.
   <span id="capstone-more" style="display: none;">
-    </br>Your challenge is to propose plans to pivot a case, such as BookMyShow, Nykaa, or Myntra, to retain their dominance. 
-    Or, act as a competitor and design a plan to outsmart them. 
-    </br>To learn successful strategies in market disruption and dominance, click the tabs under the section: 
+    </br>Your challenge is to propose plans to pivot: BookMyShow, Nykaa, or Myntra, to retain their dominance. 
+    Or, act as a competitor to any one of them and design a plan to beat them. 
+    </br>Review successful strategies in market disruption and dominance, via the 3 tabs under the section: 
     <b>Check the examples</b> — each tells a story of deep insight, and strategic execution. 
    </br></br> For the lab challenge, start with the briefs on the <b>Three Suggested Cases</b>.
   </span>
@@ -327,17 +327,15 @@
     }
   }
 </script>
-        <p><strong>Lab Challenge Steps:</strong></br> <u>First</u>, engage with this module individually.</br> <u>Next</u>, analyse <span id="lab-more" style="display: none;">
-    the samples and the challenge as a group.  
-    <em>Note: These groups can be your existing ET project groups.</em>
+        <p><strong>Lab Challenge Steps:</strong></br> <u>First</u>, engage with this module individually.</br> <u>Next</u>, analyse <span id="lab-more" style="display: none;"> the three examples as a group. <em>Note: These groups can be your existing ET project groups.</em>
     <br>
     <strong>In your respective groups:</strong>
     <br>
     1) Select one service brand from the cases above (dominant brand or a challenger).<br>
     2) Collectively negotiate an objective as a group.<br>
-    3) Prepare a short strategy outline that responds to the competitive context.
+    3) Prepare a short strategy outline that the context.
     <br>
-    Finally, click the <strong>Lab Challenge</strong> tab, read the instructions on how to share the outline, and submit it via the provided link.
+    Finally, click the <strong>Lab Challenge</strong> tab, read the instructions, use AI to brainstorm, and when you are ready, submit your plan.
   </span>
 
   <button id="lab-toggle"
@@ -408,7 +406,7 @@
       </section>
 
       <div class="footer-note">
-        <b>Curator: Dr. Pravat, GIM, Goa, for accademic use.</b>
+        <b>Curator: Dr. Pravat, GIM, Goa, for academic use.</b>
       </div>
     </div>
   </div>
@@ -475,8 +473,9 @@
         <button class="modal-close" onclick="closeModal('modal-cta')">&times;</button>
       </div>
       <div class="modal-body">
-        <p>Now that you are here, we hope you are ready to upload your group's 1-page note. </br>
-          <a href="https://coolpravat.github.io/MKT-Strategy-Prompt/" target="_blank"> If needed, practice strategy prompts and draft reports.</a> </p></br></br>
+        <p>This is the moment of truth! Here, you can upload your group's one-page note. </br>
+          <a href="https://coolpravat.github.io/MKT-Strategy-Prompt/" target="_blank"> This link can help you to brainstorm and iterate multiple drafts.</a> </p></br>
+      <p>It uses AI to help you, <b>but be aware that all AI tools can make mistakes!</b> </p></br></br>
         <p>When ready, please submit your group's note and details via the Ms-Forms link.</p>
 
         <p><strong>Submission Link:</strong></p>
@@ -523,6 +522,7 @@
   </script>
 </body>
 </html>
+
 
 
 
